Fixed homepage layout issue

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -96,10 +96,16 @@
 }
 
 .cours-cont{
-	margin-left: 10px;
+	padding-left: 10px;
 	margin-top: 5px;
 	float: left;
-	width: 585px;
+	width: 100%;
+}
+
+.cours-list-cont{
+	padding-left: 210px;
+	margin-top: 5px;
+	width: 100%;
 }
 
 .cours-stats{
@@ -548,7 +554,7 @@
 
 h1{
 	margin-top: 20px;
-	font-weight: lighter;
+	font-weight: 300;
 	margin-left: -2px;
 	a{
 		text-decoration: none;
@@ -563,10 +569,7 @@ h1{
 
 h2{
 	margin-top: 20px;
-}
-
-h4{
-	font-weight: lighter;
+	font-weight: 300;
 }
 
 .edit-form{
@@ -1030,7 +1033,7 @@ input[type='checkbox']:checked {
 	max-width: 850px;
 	h1{
 		color: #333;
-		font-weight:500;
+		font-weight:300;
 	}
 }
 
